Completed SpotBugs and Checkstyle